--- a/contactus.html
+++ b/contactus.html
@@ -21,10 +21,10 @@
             <a class="navbar-brand mr-auto" href="#">Ristorante Con Fusion</a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active"><a href="#" class="nav-link"><span class="fa fa-home fa-lg"></span> Home</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link"><span class="fa fa-home fa-lg"></span> Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
                     <li class="nav-item"><a href="#" class="nav-link"><span class="fa fa-list fa-lg"></span> Menu</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
+                    <li class="nav-item"><a href="contactus.html" class="nav-link active"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -81,14 +81,78 @@
              <div class="col-12 col-sm-11 offset-sm-1">
                  <div class="btn-group" role="group">
                     <a role="button" class="btn btn-primary" href="tel:+9876543210"><i class="fa fa-phone"></i> Call</a>
-                    <a role="button" class="btn btn-info"><i class="fa fa-skype"></i> Skype</a>
+                    <a role="button" class="btn btn-info" href="skype"><i class="fa fa-skype"></i> Skype</a>
                     <a role="button" class="btn btn-success" href="mailto:my@my.com"><i class="fa fa-envelope"></i> Email</a>
                  </div>
              </div>
          </div>
 
         <div class="row row-content">
-            <h3>Send us your Feedback</h3>
+            <div class="col-12">
+                <h3>Send us your Feedback</h3>
+            </div>
+            <div class="col-12 col-md-9">
+                <form>
+                    <div class="form-group row">
+                        <label for="firstname" class="col-md-2 col-form-label">First Name</label>
+                        <div class="col-md-10">
+                            <input type="text" class="form-control" name="fname" id="firstname"
+                            placeholder="First Name">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="lastname" class="col-12 col-md-2 col-form-label">Last Name</label>
+                        <div class="col-md-10">
+                            <input type="text" name="lname" id="lastname" class="form-control" placeholder="Last Name">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="telnum" class="col-12 col-md-2 col-form-label">Telephone</label>
+                        <div class="col-4 col-md-3">
+                            <input type="tel" class="form-control" name="areacode" id="areacode" placeholder="Area Code">
+                        </div>
+                        <div class="col-8 col-md-7">
+                            <input type="tel"  class="form-control" name="telnum" id="telnum" placeholder="Tel. Number">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="email" class="col-12 col-md-2 col-form-label">Email</label>
+                        <div class="col-md-10">
+                            <input type="email" class="form-control" name="email" id="email" placeholder="Email">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-md-6 offset-md-2">
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" name="approve" id="approve" value="">
+                                <label class="form-check-label" for="approve">
+                                    <strong>May we contact you?</strong>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 offset-md-1">
+                            <select name="contact" id="contact" class="form-control">
+                                <option value="1">Tel</option>
+                                <option value="2">Email</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="feedback" class="col-12 col-md-2 col-form-label">Your Feedback</label>
+                        <div class="col-md-10">
+                            <textarea name="feedback" id="feedback" rows="8" class="form-control"></textarea>
+                        </div>
+                    </div>
+                    <div class="row form-group">
+                        <div class="offset-md-2 col-md-10">
+                            <button type="submit" class="btn btn-primary">Send Feedback</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-12 col-md">
+
+            </div>
         </div>
         
     </div>
