--- a/index.html
+++ b/index.html
@@ -32,15 +32,26 @@
     
     <header class="jumbotron">
         <div class="container">
-            <div class="row row-header">
-                <div class="col-12 col-sm-6">
-                    <h1>Ristorante con Fusion</h1>
-                    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
-                </div>
-                <div class="col-12 col-sm align-self-center">
-                    <img src="img/logo.png" alt="logo" class="img-fluid">
-                </div>
-            </div>
+            <!-- <div class="row row-header">
+                <div class="col-12"> -->
+                    <div class="row row-header">
+                        <div class="col-12 col-sm-6">
+                            <h1>Ristorante con Fusion</h1>
+                            <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
+                        </div>
+                        <div class="col-12 col-sm-6 align-self-center">
+                            <div class="row">
+                                <div class="col-6">
+                                    <img src="img/logo.png" alt="logo" class="img-fluid">
+                                </div>
+                                <div class="col-6 align-self-center">
+                                    <a href="#reserve-form" class="btn btn-block bg-warning">Reserve Table</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                <!-- </div>
+            </div> -->
         </div>
     </header>
 
@@ -78,7 +89,7 @@
             <div class="col col-sm col-md">
                 <div class="media">
                     <div class="media-body">
-                        <h2>Weekend Grand Buffet</h2>
+                        <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
                         <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
                     </div>
                     <img src="img/buffet.png" alt="buffet" class="d-flex img-thumbnail align-self-center ml-3">
@@ -97,6 +108,64 @@
                         <h2>Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
                         <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="reserve-form" class="row row-content justify-content-center">
+            <div class="col-12 col-sm-8">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <form action="" method="get">
+                            <div class="form-group row">
+                                <label class="col-12 col-sm-3">Number of Guests</label>
+                                <div class="col-12 col-sm-9">
+                                    <div class="form-check form-check-inline">
+                                        <input type="radio" name="guest" class="form-check-input" value="1">
+                                        <label for="1" class="form-check-label">1</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="radio" name="guest" class="form-check-input" value="2">
+                                        <label for="2" class="form-check-label">2</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="radio" name="guest" class="form-check-input" value="3">
+                                        <label for="3" class="form-check-label">3</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="radio" name="guest" class="form-check-input" value="4">
+                                        <label for="4" class="form-check-label">4</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="radio" name="guest" class="form-check-input" value="5">
+                                        <label for="5" class="form-check-label">5</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input type="radio" name="guest" class="form-check-input" value="6">
+                                        <label for="6" class="form-check-label">6</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="example-date-input" class="col-3 col-form-label">Date</label>
+                                <div class="col-9">
+                                  <input class="form-control" type="date" value="2020-11-20" id="example-date-input" name="date">
+                                </div>
+                              </div>
+                            <div class="form-group row">
+                                <label for="example-time-input" class="col-3 col-form-label">Time</label>
+                                <div class="col-9">
+                                  <input class="form-control" type="time" value="Time" id="example-time-input" name="time">
+                                </div>
+                              </div>
+                            <div class="form-group row">
+                                <div class="col-12 col-md-3 offset-md-3">
+                                    <input type="submit" class="btn btn-primary btn-block" value="Reserve">
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
