tabs with nav-pills

--- a/aboutus.html
+++ b/aboutus.html
@@ -103,7 +103,7 @@
         <div class="row row-content">
             <div class="col-12">
                 <h2>Corporate Leadership</h2>
-                <ul class="nav nav-tabs">
+                <ul class="nav nav-pills">
                     <li class="nav-item">
                         <a href="#peter" class="nav-link active" role="tab" data-toggle="tab">Peter Pan, CEO</a>
                     </li>
