--- a/index.html
+++ b/index.html
@@ -71,6 +71,82 @@
             </div>
         </div>
     </div>
+
+    <div id="reserve-modal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form action="" method="get">
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-3">Number of Guests</label>
+                            <div class="col-12 col-sm-9">
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" name="guest" class="form-check-input" value="1">
+                                    <label for="1" class="form-check-label">1</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" name="guest" class="form-check-input" value="2">
+                                    <label for="2" class="form-check-label">2</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" name="guest" class="form-check-input" value="3">
+                                    <label for="3" class="form-check-label">3</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" name="guest" class="form-check-input" value="4">
+                                    <label for="4" class="form-check-label">4</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" name="guest" class="form-check-input" value="5">
+                                    <label for="5" class="form-check-label">5</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" name="guest" class="form-check-input" value="6">
+                                    <label for="6" class="form-check-label">6</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="smoking" class="col-3 col-form-label">Section</label>
+                            <div class="col-9">
+                                <div class="btn-group" data-toggle="buttons">
+                                    <label class="btn btn-success form-check-label active">
+                                        <input id="section" type="radio" name="section" id="1" autocomplete="off" checked>
+                                        Non-Smoking
+                                    </label>
+                                    <label class="btn btn-danger form-check-label">
+                                        <input id="section" type="radio" name="section" id="2" autocomplete="off">
+                                        Smoking
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="example-date-input" class="col-3 col-form-label">Date</label>
+                            <div class="col-9">
+                              <input class="form-control" type="date" value="2020-11-20" id="example-date-input" name="date">
+                            </div>
+                          </div>
+                        <div class="form-group row">
+                            <label for="example-time-input" class="col-3 col-form-label">Time</label>
+                            <div class="col-9">
+                              <input class="form-control" type="time" value="Time" id="example-time-input" name="time">
+                            </div>
+                          </div>
+                        <div class="form-group row">
+                            <div class="col-12 col-md-3 offset-md-3">
+                                <input type="submit" class="btn btn-primary btn-block" value="Reserve">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <header class="jumbotron">
         <div class="container">
             <!-- <div class="row row-header">
@@ -86,7 +162,7 @@
                                     <img src="img/logo.png" alt="logo" class="img-fluid">
                                 </div>
                                 <div class="col-6 align-self-center">
-                                    <a href="#reserve-form" class="btn btn-block bg-warning" data-toggle="tooltip" data-html="true" title="Or Call Us at +23456789" data-placement="bottom">Reserve Table</a>
+                                    <a data-toggle="modal" class="btn btn-block bg-warning" data-toggl="tooltip" data-html="true" title="Or Call Us at +23456789" data-placement="bottom" data-target="#reserve-modal">Reserve Table</a>
                                 </div>
                             </div>
                         </div>
@@ -104,7 +180,7 @@
         </ol>
         <div class="row row-content">
             <div class="col">
-                <div class="carousel slide" id="mycarousel" data-ride="carousel">
+                <div class="carousel slide" id="mycarousel" data-ride="carousel" data-interval=3000>
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
                             <img src="/img/uthappizza.png" alt="uthappizza" class="d-block img-fluid">
@@ -305,9 +381,8 @@
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();
+            $('[data-toggl="tooltip"]').tooltip();
         });
-        
     </script>
 </body>
 
