--- a/index.html
+++ b/index.html
@@ -221,6 +221,14 @@
                     <a href="#mycarousel" class="carousel-control-next" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                            <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                            <span class="fa fa-play"></span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -276,7 +284,7 @@
             </div>
         </div>
 
-        <div id="reserve-form" class="row row-content justify-content-center">
+        <!-- <div id="reserve-form" class="row row-content justify-content-center">
             <div class="col-12 col-sm-8">
                 <div class="card">
                     <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
@@ -332,7 +340,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <footer class="footer">
@@ -382,6 +390,18 @@
     <script>
         $(document).ready(function(){
             $('[data-toggl="tooltip"]').tooltip();
+            $('#mycarousel').carousel({
+                interval: 1500,
+                pause: false
+                });
+            $('#carousel-pause').click(function(){
+                console.log("Paused");
+                $('#mycarousel').carousel('pause');
+            });
+            $('#carousel-play').click(function(){
+                console.log("Played");
+                $('#mycarousel').carousel('cycle');
+            });
         });
     </script>
 </body>
