Jquery carousel pause-play single button

--- a/index.html
+++ b/index.html
@@ -221,14 +221,9 @@
                     <a href="#mycarousel" class="carousel-control-next" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
-                    <div class="btn-group" id="carouselButton">
-                        <button class="btn btn-danger btn-sm" id="carousel-pause">
-                            <span class="fa fa-pause"></span>
-                        </button>
-                        <button class="btn btn-danger btn-sm" id="carousel-play">
-                            <span class="fa fa-play"></span>
-                        </button>
-                    </div>
+                    <button class="btn btn-danger btn-sm" id="carouselButton">
+                        <span class="fa fa-pause"></span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -391,16 +386,19 @@
         $(document).ready(function(){
             $('[data-toggl="tooltip"]').tooltip();
             $('#mycarousel').carousel({
-                interval: 1500,
+                interval: 2000,
                 pause: false
-                });
-            $('#carousel-pause').click(function(){
-                console.log("Paused");
-                $('#mycarousel').carousel('pause');
             });
-            $('#carousel-play').click(function(){
-                console.log("Played");
-                $('#mycarousel').carousel('cycle');
+            $('#carouselButton').click(function(){
+                if($('#carouselButton').children('span').hasClass('fa-pause')){
+                    $('#mycarousel').carousel('pause');
+                    $('#carouselButton').children('span').removeClass('fa-pause');
+                    $('#carouselButton').children('span').addClass('fa-play');
+                }else{
+                    $('#mycarousel').carousel('cycle');
+                    $('#carouselButton').children('span').removeClass('fa-play');
+                    $('#carouselButton').children('span').addClass('fa-pause');
+                }
             });
         });
     </script>
