--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
                             <div class="col-9">
                                 <div class="btn-group" data-toggle="buttons">
                                     <label class="btn btn-success form-check-label active">
-                                        <input id="section" type="radio" name="section" id="1" autocomplete="off" checked>
+                                        <input class="section" type="radio" name="section" value="1" autocomplete="off" checked>
                                         Non-Smoking
                                     </label>
                                     <label class="btn btn-danger form-check-label">
-                                        <input id="section" type="radio" name="section" id="2" autocomplete="off">
+                                        <input class="section" type="radio" name="section" value="2" autocomplete="off">
                                         Smoking
                                     </label>
                                 </div>
